remove hardcoded fact on start

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Fun Facts</string>
+    <string name="did_you_know">Did you know?</string>
+    <string name="show_another_fun_fact">Show Another Fun Fact</string>
 </resources>
